fix(management): fix rendering issue on firefox
fix gravitee-io/issues#4288

--- a/src/management/configuration/user/_user.scss
+++ b/src/management/configuration/user/_user.scss
@@ -17,3 +17,14 @@
     border: 0;
   }
 }
+
+
+md-select.md-table-select {
+  .md-select-value  {
+    span {
+      .md-text {
+        padding-top: 2px;
+        } 
+    }
+  }
+}
